--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <base href="/">
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/logoNewMe2.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
